#feat:(chapter 3 .done==>if-else,switch,ternary operator)

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <!-- <script> console.log("hey this is me");</script> -->
    
 </body>
-<script src="/js/js.js">
+<script src="/js/chapter3(if-else-switch0.js">
     
 </script>
 </html>
