#feat(update the commit)chapter3.png

--- a/index.html
+++ b/index.html
@@ -9,7 +9,14 @@
 <link rel="stylesheet" href="/css/style.css">
 </head>
 <body>
-    <h1>HEy! This is Tofayel islam</h1>
+    <h1>HEy! This is chapter 3</h1>
+    <p>this chapter contains many things:</p>
+    <ul>
+        <li>if</li>
+        <li>else</li>
+        <li>switch</li>
+        <li>ternary operator</li>
+    </ul>
     <!-- <script> console.log("hey this is me");</script> -->
    
 </body>
