#feat:(for loop)

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <link rel="stylesheet" href="/css/style.css">
 </head>
 <body>
-    <h1>HEy! This is chapter 3</h1>
+    <h1>HEy! This is chapter 4</h1>
     <p>this chapter contains many things:</p>
     <ul>
         <li>if</li>
@@ -20,7 +20,7 @@
     <!-- <script> console.log("hey this is me");</script> -->
    
 </body>
-<script src="/js/chapter3(if-else-switch0.js">
+<script src="/js/chapter4(loop).js">
     
 </script>
 </html>
