all avout string

--- a/index.html
+++ b/index.html
@@ -9,18 +9,16 @@
 <link rel="stylesheet" href="/css/style.css">
 </head>
 <body>
-    <h1>HEy! This is chapter 4</h1>
+    <h1>HEy! This is chapter 5</h1>
     <p>this chapter contains many things:</p>
     <ul>
-        <li>if</li>
-        <li>else</li>
-        <li>switch</li>
-        <li>ternary operator</li>
+        <li>string</li>
+       
     </ul>
     <!-- <script> console.log("hey this is me");</script> -->
    
 </body>
-<script src="/js/chapter4(loop).js">
+<script src="/js/chapter5(string).js">
     
 </script>
 </html>
