#feat:(chapter6==> all about basic array ,array methods etc)

--- a/index.html
+++ b/index.html
@@ -9,16 +9,16 @@
 <link rel="stylesheet" href="/css/style.css">
 </head>
 <body>
-    <h1>HEy! This is chapter 5</h1>
+    <h1>HEy! This is chapter 6</h1>
     <p>this chapter contains many things:</p>
     <ul>
-        <li>string</li>
+        <li>array</li>
        
     </ul>
     <!-- <script> console.log("hey this is me");</script> -->
    
 </body>
-<script src="/js/chapter5(string).js">
+<script src="/js/chapter6(array).js">
     
 </script>
 </html>
