#feat:(functional programming==>callback function)

--- a/index.html
+++ b/index.html
@@ -12,13 +12,13 @@
     <h1>HEy! This is chapter 8</h1>
     <p>this chapter contains many things:</p>
     <ul>
-        <li>Function</li>
+        <li>Functional programming!!!</li>
        
     </ul>
     <!-- <script> console.log("hey this is me");</script> -->
    
 </body>
-<script src="/js/chapter8(function).js">
+<script src="/js/chapter9(functionalprogramming).js">
     
 </script>
 </html>
