#scope and closer

--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
     <!-- <script> console.log("hey this is me");</script> -->
    
 </body>
-<script src="/js/chapter9(functionalprogramming).js">
+<script src="/js/chapter10(scope&closer).js">
     
 </script>
 </html>
