many changes happen

--- a/index.html
+++ b/index.html
@@ -9,16 +9,23 @@
 <link rel="stylesheet" href="/css/style.css">
 </head>
 <body>
-    <h1>HEy! This is chapter 8</h1>
+    <h1>HEy! This is chapter 11</h1>
     <p>this chapter contains many things:</p>
     <ul>
-        <li>Functional programming!!!</li>
+        <li>OOP programming!!!</li>
        
     </ul>
+
+    <div class="oop">
+        <h1>
+            OOP is kind of Fun
+        </h1>
+    </div>
     <!-- <script> console.log("hey this is me");</script> -->
    
 </body>
-<script src="/js/chapter10(scope&closer).js">
+<!--adding js-->
+<script src="/js/chapter11(oop).js">
     
 </script>
 </html>
