--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
    
 </body>
 <!--adding js-->
-<script src="/js/chapter11(oop).js">
+<script src="/js/chapter15(es6).js">
     
 </script>
 </html>
